# ppo-lstm-drone-nav

./: CMakeLists.txt  README.md  package.xml
launch/: simulation.launch
media/: Testing wih path.MOV
models/: iris.sdf
scripts/: drone_lstm.py  train_lstm_recurrentppo.py
scripts/recurrent_ppo_tensorboard/: path_log.csv
scripts/recurrent_ppo_tensorboard/FinalRun_1/: events.out.tfevents.1749035293.MSI.71127.0
scripts/recurrent_ppo_tensorboard/FinalRun_2/: events.out.tfevents.1749036331.MSI.73177.0
worlds/: corridor_static.world
